minor fixes to semester validation, and cohort service and repo